# OTEL-OpenAI-performance-investigation

./: .gitignore  README.md  gunicorn_conf.py  main.py  pyproject.toml  run.sh
