[tool.poetry]
name = "gas-performance"
version = "0.1.0"
description = ""
authors = ["Tom Gurion <tgurion@mintel.com>"]
readme = "README.md"
packages = [{include = "gas_performance"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.112.3"}
langchain-core = "^0.2.38"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
